--- a/app/views/preventions/_ovk_medium_risk_addresses.html.erb
+++ b/app/views/preventions/_ovk_medium_risk_addresses.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <div class="svg-pat-logo-ovk"></div>
+    <div class="svg-pat-logo"></div>
     <h6 class="card-subtitle mb-2 text-muted"><%= t("prevention.ovk.address_title") %></h6>
     <div>
       <p class="card-text">Rosenbergstrasse 82</p>
