--- a/app/views/preventions/_ticino_medium_risk_addresses.html.erb
+++ b/app/views/preventions/_ticino_medium_risk_addresses.html.erb
@@ -1,6 +1,8 @@
 <div class="card">
   <div class="card-body">
-    <h6 class="card-subtitle mb-2 text-muted">PAT - Associazione Progetto Genitori</h6>
+    <div class="svg-pat-logo"></div>
+    <h6 class="card-subtitle mb-2 text-muted"><%= t("pat_address") %></h6>
+    <p class="card-subtitle mb-2 text-muted"><%= t("pat_address_additional_1") %><br><%= t("pat_address_additional_2") %></p>
     <div>
       <p class="card-text">Via Soldini 25</p>
       <p class="card-text">6830 Chiasso</p>
@@ -33,7 +35,7 @@
     </div>
     <hr class="sm">
     <div>
-      <p class="card-text">6962 Lugano – Viganello</p>
+      <p class="card-text">6962 Lugano - Viganello</p>
       <a href="tel:+41 91 815 21 51"><i class="fas fa-phone-alt"></i>+41 91 815 21 51</a>
     </div>
     <hr class="sm">
