--- a/app/views/preventions/index.html.erb
+++ b/app/views/preventions/index.html.erb
@@ -14,8 +14,8 @@
     </div>
     <div class="control-link <%= @selected_ti %>">
         <%= link_to preventions_path(organization: "ti") do %>
-          <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
-          <span class="logo-link-text">PAT Ticino</span>
+          <%= image_tag("logo-apg.png", alt:"Logo PAT Imparo con i genitori Ticino", class: "logo-link") %>
+          <span class="logo-link-text">PAT Imparo con i genitori Ticino</span>
         <% end %>
     </div>
   </div>
