--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -7,7 +7,8 @@
     <% end %>
   <% else %>
     <%= link_to root_path do %>
-      <%= image_tag("logo.png", alt:"Logo PAT - Parents as Teachers", class: "logo") %>
+      <%= image_tag("logo-apg.png", alt:"Associazone Progetto Genitori", class: "logo") %>
+      <span class="logo-link-text">PAT Imparo con i genitori Ticino</span>
     <% end %>
   <% end %>
 </div>
