--- a/app/views/preventions/low_risk.html.erb
+++ b/app/views/preventions/low_risk.html.erb
@@ -6,8 +6,8 @@
         <div class="svg-logo"></div>
     </div>
     <div class="logo-ti <%= @selected_ti %>">
-      <%= image_tag("logo-pat.png", alt:"Logo PAT - Ticino", class: "logo-link") %>
-      <span class="logo-link-text">PAT Ticino</span>
+      <%= image_tag("logo-apg.png", alt:"Logo PAT Imparo con i genitori Ticino", class: "logo-link") %>
+      <span class="logo-link-text">PAT Imparo con i genitori Ticino</span>
     </div>
   </div>
   <div id="quicklinks-overlay">
