--- a/app/views/layouts/_language_switcher.html.erb
+++ b/app/views/layouts/_language_switcher.html.erb
@@ -6,7 +6,7 @@
     <div class="dropdown-menu dropdown-menu-right">
         <% I18n.available_locales.each do |locale| %>
             <% if I18n.locale != locale %>
-              <%= link_to "#{locale}", url_for(locale: locale, organization: @selected_organization), class: "dropdown-item" %>
+              <%= link_to "#{locale}", url_for(locale: locale, org: @selected_organization), class: "dropdown-item" %>
             <% end %>
         <% end %>
     </div>
