--- a/app/views/partials/_logo.html.erb
+++ b/app/views/partials/_logo.html.erb
@@ -1,8 +1,14 @@
 <div id="logo">
-  <% if @ovk_iframe %>
+  <% if @org == 'ovk' %>
     <%= link_to root_path do %>
       <div class="logo-ovk">
-          <div class="svg-logo"></div>
+        <div class="svg-logo-ovk"></div>
+      </div>
+    <% end %>
+  <% elsif @org == 'zenso' %>
+    <%= link_to root_path do %>
+      <div class="logo-zenso">
+        <div class="svg-logo-zenso"></div>
       </div>
     <% end %>
   <% else %>
