--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -300,8 +300,21 @@ button, [type="button"], [type="reset"], [type="submit"] {
 #menu .logo-ovk {
   height: 124px;
   width: 160px;
-  .svg-logo {
+  .svg-logo-ovk {
     background-image: url( '../images/ovk-logo-inverted.svg' );
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+    margin: 5px 0;
+  }
+}
+
+#menu .logo-zenso {
+  height: 124px;
+  width: 250px;
+  .svg-logo-zenso {
+    background-image: url( '../images/logo-zenso.svg' );
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
@@ -388,8 +401,16 @@ button, [type="button"], [type="reset"], [type="submit"] {
   padding-left: 0;
   min-height: 3.5rem;
   display: table;
-  .svg-logo {
+  .svg-logo-ovk {
     background-image: url( '../images/ovk-logo-inverted.svg' );
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 60px;
+    margin: 5px 0;
+  }
+  .svg-logo-zenso {
+    background-image: url( '../images/logo-zenso.svg' );
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
@@ -772,12 +793,18 @@ a.button {
   #main {
     padding: 4rem 1.5rem 1.5rem 1.5rem ;
     margin-bottom: 2rem;
-    .card .svg-pat-logo {
-      width: 70px;
-      height: 30px;
+    .card {
+      .svg-pat-logo {
+        width: 70px;
+        height: 30px;
+      }
+      .card-subtitle {
+        width: 75%;
+      }
     }
   }
 }
+
 #footer, #main {
   -moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 1.325s ease-in-out;
   -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 1.325s ease-in-out, opacity 0.325s ease-in-out;
@@ -810,10 +837,13 @@ a.button {
 }
 
 #main .header-logo {
-  .logo-ovk, .logo-ti {
+  .logo-ovk, .logo-ti, .logo-zenso {
     display: none;
   }
   .logo-ovk.selected {
+    display: inline-block;
+  }
+  .logo-zenso.selected {
     display: inline-block;
   }
   .logo-ti.selected {
@@ -824,12 +854,20 @@ a.button {
   position: absolute;
   top: 7px;
   left: 15px;
-  .svg-logo {
+  .svg-logo-ovk {
     display: inline-block;
     background-image: url( '../images/ovk-logo-inverted.svg' );
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 3rem;
+    height: 3rem;
+  }
+  .svg-logo-zenso {
+    display: inline-block;
+    background-image: url( '../images/logo-zenso.svg' );
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 7rem;
     height: 3rem;
   }
   .logo-link {
