--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,10 @@
   <%= render 'partials/logo' %>
   <div class="content">
     <div class="inner">
-      <% if @ovk_iframe %>
+      <% if @org == 'ovk' %>
         <h2><%= t("home.ovk.subtitle_html") %></h2>
+      <% elsif @org == 'zenso' %>
+        <h2><%= t("home.zenso.subtitle_html") %></h2>
       <% else %>
         <h2><%= t("home.pat_ti.subtitle_html") %></h2>
       <% end %>
@@ -14,7 +16,7 @@
     <div class="control-link">
       <%= link_to t("home.questionnaire"), question_1_path %>
     </div>
-    <% if I18n.locale == :it && !@ovk_iframe %>
+    <% if I18n.locale == :it && @org == 'ti' %>
       <div class="control-link">
         <%= link_to t("home.about_us"), about_path %>
       </div>
