--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="turbolinks-cache-control" content="no-cache">
     <title><%= page_title %></title>
-    <link rel="manifest" href="/manifest.json">
     <%= render 'partials/ios_pwa_links' %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#E9EEBD"/>
+    <meta name="theme-color" content="#57b1dd94"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable"  content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -25,6 +24,5 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
-
   </body>
 </html>
